Displaying and showing posts

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,4 +1,8 @@
 @import './components/auth/auth';
+@import './components/navbar/navbar';
+@import './components/layout components/Trending/trending';
+@import './components/layout components/Trending/TrendingItem/trendingitem';
+@import './components/layout components/Post/post';
 
 .container-fluid {
     display: flex;
