--- a/client/src/App.css
+++ b/client/src/App.css
@@ -108,6 +108,151 @@
   margin: 15px 0;
 }
 
+.nav-container {
+  margin: 0;
+  max-width: 100%;
+  width: 100%;
+  padding: 0;
+}
+
+.nav-container .bd-navbar {
+  background-color: #fff !important;
+}
+
+.nav-container nav {
+  width: 100%;
+}
+
+.nav-container nav .utils .icons span {
+  margin: 5px 20px 5px 0px;
+}
+
+.nav-container nav .utils .icons span i {
+  font-size: 20px;
+  color: #8b8b8b;
+}
+
+.nav-container nav .utils .icons span i:hover {
+  color: #626262;
+}
+
+.nav-container nav .utils .user-icon {
+  position: relative;
+}
+
+.nav-container nav .utils .user-icon .img {
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  background-color: grey;
+}
+
+.nav-container nav .utils .user-icon .drop-down-container {
+  display: none;
+  position: absolute;
+  list-style: none;
+  left: -130px;
+  top: 37px;
+  width: 150px;
+  padding: 8px;
+  background-color: #313131;
+}
+
+.nav-container nav .utils .user-icon .drop-down-container::before {
+  content: '';
+  width: 15px;
+  height: 15px;
+  background-color: #313131;
+  position: absolute;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  right: 4px;
+  top: -6px;
+}
+
+.nav-container nav .utils .user-icon .drop-down-container li {
+  color: white;
+  font-size: 14px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.nav-container nav .utils .user-icon .toggle-drop-down {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  z-index: 3;
+}
+
+.nav-container nav .utils .upgrade {
+  margin-right: 20px;
+}
+
+.nav-container nav .utils .upgrade button {
+  height: 30px;
+  padding: 2px 10px;
+  font-size: 14px;
+  border-width: 2px;
+}
+
+.nav-container .drop-closer {
+  display: none;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0);
+  z-index: 1;
+}
+
+.trending {
+  max-width: 100%;
+  width: 100%;
+  height: 220px;
+  position: relative;
+  padding: 0;
+  margin: 0;
+}
+
+.trending-item {
+  width: 280px;
+  height: 220px;
+  padding: 10px;
+  margin: 0 15px;
+}
+
+.trending-item .img-container {
+  width: 100%;
+  height: 120px;
+  background-color: indianred;
+  cursor: pointer;
+}
+
+.trending-item .bottom-section h3 {
+  font-size: 18px;
+  margin: 5px 0;
+  cursor: pointer;
+}
+
+.trending-item .bottom-section p {
+  font-size: 14px;
+  margin-top: auto;
+  margin-bottom: auto;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.trending-item .bottom-section .user span {
+  width: 5px;
+  height: 5px;
+  border-radius: 100%;
+  background-color: gray;
+  margin: 0 5px;
+}
+
 .container-fluid {
   display: -webkit-box;
   display: -ms-flexbox;
