--- a/client/src/App.css
+++ b/client/src/App.css
@@ -225,7 +225,7 @@
 .trending-item .img-container {
   width: 100%;
   height: 120px;
-  background-color: indianred;
+  background-color: #a8a8a8;
   cursor: pointer;
 }
 
@@ -245,12 +245,134 @@
           user-select: none;
 }
 
+.trending-item .bottom-section .user {
+  position: relative;
+}
+
 .trending-item .bottom-section .user span {
   width: 5px;
   height: 5px;
   border-radius: 100%;
   background-color: gray;
   margin: 0 5px;
+}
+
+.trending-item .bottom-section .user i {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  position: absolute;
+  right: 0;
+  color: #999999;
+}
+
+.moving {
+  width: 80px;
+  height: 25px;
+  background: -webkit-gradient(linear, left top, right top, from(#e9e9e9), color-stop(#e6e6e6), to(#e9e9e9));
+  background: linear-gradient(to right, #e9e9e9, #e6e6e6, #e9e9e9);
+  -webkit-animation: progress 0.5s infinite ease-in;
+          animation: progress 0.5s infinite ease-in;
+  -webkit-transform: translateX(-80px);
+          transform: translateX(-80px);
+}
+
+@-webkit-keyframes progress {
+  from {
+    -webkit-transform: translateX(-80px);
+            transform: translateX(-80px);
+  }
+  to {
+    -webkit-transform: translateX(330px);
+            transform: translateX(330px);
+  }
+}
+
+@keyframes progress {
+  from {
+    -webkit-transform: translateX(-80px);
+            transform: translateX(-80px);
+  }
+  to {
+    -webkit-transform: translateX(330px);
+            transform: translateX(330px);
+  }
+}
+
+.trending-placeholder {
+  width: 260px;
+  height: 75px;
+  margin-top: 5px;
+}
+
+.trending-placeholder .heading-cont {
+  width: 260px;
+  height: 25px;
+  background-color: #e9e9e9;
+  overflow-x: hidden;
+}
+
+.trending-placeholder .content1 {
+  width: 250px;
+  height: 18px;
+  background-color: #e9e9e9;
+  overflow-x: hidden;
+  margin: 5px 0;
+}
+
+.trending-placeholder .content1 .aad1 {
+  height: 18px;
+}
+
+.trending-placeholder .content2 {
+  width: 200px;
+  height: 18px;
+  background-color: #e9e9e9;
+  overflow-x: hidden;
+  margin: 5px 0;
+}
+
+.trending-placeholder .content2 .aad2 {
+  height: 18px;
+}
+
+.post-container-one {
+  padding: 0 130px;
+}
+
+.post-heading {
+  padding: 0;
+  margin: 40px 0 10px 0;
+  font-size: 55px;
+}
+
+.user-p {
+  padding: 0 0 10px 0;
+}
+
+.user-p .dot-i {
+  width: 8px;
+  height: 8px;
+  border-radius: 100%;
+  background-color: #ccc;
+  margin: 0 10px;
+}
+
+.img-post-container {
+  width: 100%;
+  height: 400px;
+  background-color: #ccc;
+  margin: auto;
+}
+
+.nn-new {
+  padding: 0px;
+}
+
+.popular-posts {
+  width: 100%;
+  max-width: 100%;
+  min-height: 10px;
+  padding: 0 20px;
 }
 
 .container-fluid {
