--- a/client/src/components/layout components/Trending/TrendingItem/_trendingitem.scss
+++ b/client/src/components/layout components/Trending/TrendingItem/_trendingitem.scss
@@ -8,7 +8,7 @@
     .img-container {
         width: 100%;
         height: 120px;
-        background-color: indianred;
+        background-color: rgb(168, 168, 168);
         cursor: pointer;
     }
 
@@ -27,6 +27,8 @@
         }
 
         .user {
+            position: relative;
+
             span {
                 width: 5px;
                 height: 5px;
@@ -34,6 +36,72 @@
                 background-color: gray;
                 margin: 0 5px;
             }
+
+            i {
+                align-self: flex-end;
+                position: absolute;
+                right: 0;
+                color: rgb(153, 153, 153);
+
+
+            }
+        }
+    }
+}
+
+.moving {
+    width: 80px;
+    height: 25px;
+    background: linear-gradient(to right, #e9e9e9, #e6e6e6, #e9e9e9);
+    animation: progress 0.5s infinite ease-in;
+    transform: translateX(-80px);
+}
+
+@keyframes progress {
+    from {
+        transform: translateX(-80px);
+    }
+
+    to {
+        transform: translateX(330px);
+    }
+}
+
+// Place holder Styles
+.trending-placeholder {
+    width: 260px;
+    height: 75px;
+    margin-top: 5px;
+
+
+    .heading-cont {
+        width: 260px;
+        height: 25px;
+        background-color: #e9e9e9;
+        overflow-x: hidden;
+    }
+
+    .content1 {
+        width: 250px;
+        height: 18px;
+        background-color: #e9e9e9;
+        overflow-x: hidden;
+        margin: 5px 0;
+
+        .aad1 {
+            height: 18px;
+        }
+    }
+
+    .content2 {
+        width: 200px;
+        height: 18px;
+        background-color: #e9e9e9;
+        overflow-x: hidden;
+        margin: 5px 0;
+
+        .aad2 {
+            height: 18px;
         }
     }
 }
