Added an editor using react-editor-js, the post css is to be made

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -5,6 +5,7 @@
 @import './components/layout components/Trending/TrendingItem/trendingitem';
 @import './components/layout components/Post/post';
 @import './components/layout components/General posts/popularposts';
+@import './components/layout components/editor/posteditor';
 
 .container-fluid {
     display: flex;
