--- a/client/src/App.css
+++ b/client/src/App.css
@@ -366,6 +366,19 @@
 
 .nn-new {
   padding: 0px;
+  font-size: 25px;
+}
+
+pre {
+  background-color: #e3e3e3;
+  min-width: 600px;
+  max-width: 100%;
+  margin: auto;
+  padding: 10px;
+}
+
+pre * {
+  font-family: 'Cutive Mono';
 }
 
 .popular-posts {
@@ -373,6 +386,102 @@
   max-width: 100%;
   min-height: 10px;
   padding: 0 20px;
+}
+
+.editor-container-compose {
+  width: 100%;
+  padding: 0 130px;
+}
+
+.editor-container-compose button {
+  width: 150px;
+  margin: 20px 0;
+}
+
+.editor-container-compose .compose-heading {
+  width: 100%;
+}
+
+.editor-container-compose .compose-heading input {
+  width: 100%;
+  height: 50px;
+  font-family: 'Playfair';
+  font-size: 30px;
+  font-weight: 600;
+  padding: 5px 10px;
+  border: none;
+}
+
+.editor-container-compose .compose-heading input:active {
+  outline: none;
+}
+
+.editor-container-compose .compose-heading input:focus {
+  outline: none;
+}
+
+.codex-editor__redactor {
+  padding-bottom: 300px !important;
+  max-width: 650px;
+  min-width: 100%;
+  margin: auto;
+}
+
+.codex-editor__redactor .ce-block .ce-block__content {
+  min-width: 100%;
+}
+
+.codex-editor__redactor .ce-block .ce-block__content .cdx-block {
+  padding: 0 10px;
+}
+
+.codex-editor__redactor .ce-block .ce-block__content .ce-code {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  min-width: 70%;
+}
+
+.codex-editor__redactor .ce-block .ce-block__content .ce-code textarea {
+  width: 700px;
+  font-family: 'Cutive Mono';
+  font-size: 20px;
+}
+
+.ce-toolbar .ce-toolbar__content .ce-toolbar__actions {
+  right: -200px !important;
+  top: 10px !important;
+}
+
+.ce-toolbar .ce-toolbar__plus {
+  -webkit-transform: translate3d(-235px, calc(19px - 50%), 0px) !important;
+          transform: translate3d(-235px, calc(19px - 50%), 0px) !important;
+  border: 2px solid #ccc;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  -webkit-transform: translateX(-5px);
+          transform: translateX(-5px);
+  padding: 1px;
+  -webkit-box-sizing: content-box !important;
+          box-sizing: content-box !important;
+  margin-right: 5px;
+  left: -39px !important;
+}
+
+.ce-toolbar .ce-toolbox {
+  -webkit-transform: translate3d(-220px, calc(19px - 50%), 0px) !important;
+          transform: translate3d(-220px, calc(19px - 50%), 0px) !important;
+}
+
+.ce-inline-toolbar .ce-inline-toolbar__buttons .ce-inline-tool--bold,
+.ce-inline-toolbar .ce-inline-toolbar__buttons .ce-inline-tool--italic,
+.ce-inline-toolbar .ce-inline-toolbar__buttons .ce-inline-tool--link,
+.ce-inline-toolbar .ce-inline-toolbar__buttons .ce-inline-tool--last {
+  width: 40px;
+  margin: 10px 0;
 }
 
 .container-fluid {
