--- a/client/src/components/layout components/Post/_post.scss
+++ b/client/src/components/layout components/Post/_post.scss
@@ -29,4 +29,17 @@
 
 .nn-new {
     padding: 0px;
+    font-size: 25px;
+}
+
+pre {
+    background-color: #e3e3e3;
+    min-width: 600px;
+    max-width: 100%;
+    margin: auto;
+    padding: 10px;
+
+    * {
+        font-family: 'Cutive Mono';
+    }
 }
