--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -6,6 +6,7 @@
 @import './components/layout components/Post/post';
 @import './components/layout components/General posts/popularposts';
 @import './components/layout components/editor/posteditor';
+@import './components/pages/dashboard';
 
 .container-fluid {
     display: flex;
