Posts can be saved to DB

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -7,6 +7,7 @@
 @import './components/layout components/General posts/popularposts';
 @import './components/layout components/editor/posteditor';
 @import './components/pages/dashboard';
+@import './components/pages/activitylist';
 
 .container-fluid {
     display: flex;
