--- a/client/src/App.css
+++ b/client/src/App.css
@@ -226,7 +226,7 @@
 .trending-item .img-container {
   width: 100%;
   height: 120px;
-  background-color: #a8a8a8;
+  background-color: #e6e6e6;
   cursor: pointer;
 }
 
@@ -303,10 +303,10 @@
 .moving {
   width: 80px;
   height: 25px;
-  background: -webkit-gradient(linear, left top, right top, from(#e9e9e9), color-stop(#e6e6e6), to(#e9e9e9));
-  background: linear-gradient(to right, #e9e9e9, #e6e6e6, #e9e9e9);
-  -webkit-animation: progress 0.5s infinite ease-in;
-          animation: progress 0.5s infinite ease-in;
+  background: -webkit-gradient(linear, left top, right top, from(#e9e9e9), color-stop(#ffffff), to(#e9e9e9));
+  background: linear-gradient(to right, #e9e9e9, #ffffff, #e9e9e9);
+  -webkit-animation: progress 0.6s infinite ease-in-out;
+          animation: progress 0.6s infinite ease-in-out;
   -webkit-transform: translateX(-80px);
           transform: translateX(-80px);
 }
@@ -380,6 +380,7 @@ i:hover {
 
 .post-container-one {
   padding: 0 130px;
+  width: 100%;
 }
 
 .post-heading {
@@ -428,7 +429,6 @@ pre * {
   width: 100%;
   max-width: 100%;
   min-height: 10px;
-  padding: 0 20px;
 }
 
 .editor-container-compose {
@@ -582,6 +582,58 @@ pre * {
 
 .dashboard-container .user-data-dash .profile .info .user-data p {
   margin: 0;
+}
+
+.saved-data {
+  width: 100%;
+  padding-right: 70px !important;
+}
+
+.activity-list {
+  width: 100%;
+  background-color: red;
+  margin-top: 30px;
+}
+
+.activity-list .list-ul {
+  list-style: none;
+  margin: 0 !important;
+}
+
+.activity-list .list-ul li {
+  height: 60px;
+  background-color: #a8a8a8;
+}
+
+.activity-list .list-ul li .list-item-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.activity-list .list-ul li .list-item-div .right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.activity-list .list-ul li .list-item-div .right .post-img {
+  width: 110px;
+  height: 60px;
+  background-color: #ccc;
+}
+
+.activity-list .list-ul li .list-item-div .right h3 {
+  color: #121212;
+  padding: 10px 0 0 10px;
+}
+
+.activity-list .list-ul li .list-item-div .options-manipulate {
+  padding: 0 20px;
+}
+
+.activity-list .list-ul li:nth-child(2n) {
+  background-color: #bdbdbd;
 }
 
 .container-fluid {
