--- a/client/src/components/layout components/Trending/TrendingItem/_trendingitem.scss
+++ b/client/src/components/layout components/Trending/TrendingItem/_trendingitem.scss
@@ -9,7 +9,7 @@
     .img-container {
         width: 100%;
         height: 120px;
-        background-color: rgb(168, 168, 168);
+        background-color: rgb(230, 230, 230);
         cursor: pointer;
     }
 
@@ -76,8 +76,8 @@
 .moving {
     width: 80px;
     height: 25px;
-    background: linear-gradient(to right, #e9e9e9, #e6e6e6, #e9e9e9);
-    animation: progress 0.5s infinite ease-in;
+    background: linear-gradient(to right, #e9e9e9, #ffffff, #e9e9e9);
+    animation: progress 0.6s infinite ease-in-out;
     transform: translateX(-80px);
 }
 
