--- a/client/src/components/pages/_activitylist.scss
+++ b/client/src/components/pages/_activitylist.scss
@@ -16,6 +16,7 @@
 
                 .right {
                     display: flex;
+                    width: auto;
 
                     .post-img {
                         width: 110px;
