--- a/client/src/components/layout components/Trending/TrendingItem/_trendingitem.scss
+++ b/client/src/components/layout components/Trending/TrendingItem/_trendingitem.scss
@@ -1,9 +1,33 @@
+@import '../../../../mixins';
+
 .trending-item {
     width: 280px;
     height: 220px;
     padding: 0px;
     margin: 0;
-    margin-right: 28px;
+    margin-right: 14px;
+    margin-left: 14px;
+
+    @include responsive($tablet) {
+        &:last-child {
+            display: none;
+        }
+    }
+
+    @include responsive($less-tab) {
+        &:nth-child(3) {
+            display: none;
+        }
+    }
+
+    @include responsive($mobile) {
+        margin: 0 10px;
+        width: 320px;
+
+        &:nth-child(1) {
+            margin-top: 30px;
+        }
+    }
 
 
     .img-container {
@@ -11,6 +35,11 @@
         height: 120px;
         background-color: rgb(230, 230, 230);
         cursor: pointer;
+
+        img {
+            width: 100%;
+            height: 120px;
+        }
     }
 
     .bottom-section {
