--- a/client/src/App.css
+++ b/client/src/App.css
@@ -637,7 +637,14 @@ pre * {
 }
 
 .dashboard-container .user-data-dash {
-  padding: 30px 0 0 70px;
+  padding: 30px 70px 0 70px;
+  width: 100%;
+}
+
+@media screen and (max-width: 950px) {
+  .dashboard-container .user-data-dash {
+    padding: 20px 30px 0 30px;
+  }
 }
 
 .dashboard-container .user-data-dash .profile {
@@ -646,16 +653,16 @@ pre * {
 
 @media screen and (max-width: 950px) {
   .dashboard-container .user-data-dash .profile {
-    display: -webkit-box !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
-    -webkit-box-pack: center !important;
-        -ms-flex-pack: center !important;
-            justify-content: center !important;
-    -webkit-box-orient: vertical !important;
-    -webkit-box-direction: normal !important;
-        -ms-flex-direction: column !important;
-            flex-direction: column !important;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 }
 
@@ -666,9 +673,26 @@ pre * {
   background-color: #ccc;
 }
 
+@media screen and (max-width: 950px) {
+  .dashboard-container .user-data-dash .profile .img-container {
+    margin: auto;
+  }
+}
+
 .dashboard-container .user-data-dash .profile .info {
   width: 120px;
   margin-top: 20px;
+  margin-left: 30px;
+}
+
+@media screen and (max-width: 950px) {
+  .dashboard-container .user-data-dash .profile .info {
+    margin: auto;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin-top: 20px;
+  }
 }
 
 .dashboard-container .user-data-dash .profile .info p {
@@ -681,8 +705,37 @@ pre * {
   display: inline;
 }
 
+@media screen and (max-width: 950px) {
+  .dashboard-container .user-data-dash .profile .info .user-data {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 .dashboard-container .user-data-dash .profile .info .user-data p {
-  margin: 0;
+  margin: auto;
+}
+
+@media screen and (max-width: 950px) {
+  .dashboard-container .user-data-dash .profile .info .user-data p {
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .dashboard-container .user-data-dash .user-posts .postss {
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .saved-data {
