--- a/client/src/components/layout components/Trending/TrendingItem/_trendingitem.scss
+++ b/client/src/components/layout components/Trending/TrendingItem/_trendingitem.scss
@@ -8,6 +8,10 @@
     margin-right: 14px;
     margin-left: 14px;
 
+    &:first-child {
+        margin-left: 0;
+    }
+
     @include responsive($tablet) {
         &:last-child {
             display: none;
@@ -24,7 +28,7 @@
         margin: 0 10px;
         width: 320px;
 
-        &:nth-child(1) {
+        &:nth-child(2) {
             margin-top: 30px;
         }
     }
