--- a/client/src/components/pages/_activitylist.scss
+++ b/client/src/components/pages/_activitylist.scss
@@ -1,3 +1,5 @@
+@import '../../mixins';
+
 .activity-list {
     width: 100%;
     background-color: red;
@@ -8,25 +10,40 @@
         margin: 0 !important;
 
         li {
-            height: 60px;
-            background-color: rgb(168, 168, 168);
+            min-height: 70px;
+            background-color: rgb(180, 180, 180);
+
+            @include responsive($less-tab) {
+                min-height: 50px;
+                // height: 45px;
+            }
 
             .list-item-div {
                 display: flex;
+                height: 100%;
 
                 .right {
                     display: flex;
                     width: auto;
+                    height: 100%;
 
                     .post-img {
-                        width: 110px;
-                        height: 60px;
+                        width: 130px;
+                        min-height: 70px;
                         background-color: #ccc;
+
+                        @include responsive($less-tab) {
+                            width: 110px;
+                        }
                     }
 
                     h3 {
                         color: #121212;
                         padding: 10px 0 0 10px;
+
+                        @include responsive($less-tab) {
+                            font-size: 20px;
+                        }
                     }
                 }
 
@@ -36,7 +53,7 @@
             }
 
             &:nth-child(2n) {
-                background-color: rgb(189, 189, 189);
+                background-color: rgb(197, 197, 197);
             }
         }
 
