--- a/client/src/App.css
+++ b/client/src/App.css
@@ -235,7 +235,8 @@
 }
 
 .trending-item:first-child {
-  margin-left: 0;
+  margin: 0 10px;
+  margin-top: 30px;
 }
 
 @media screen and (max-width: 1245px) {
@@ -256,7 +257,7 @@
     width: 320px;
   }
   .trending-item:nth-child(2) {
-    margin-top: 30px;
+    margin-top: 20px;
   }
 }
 
@@ -425,10 +426,34 @@ i:hover {
   width: 100%;
 }
 
+@media screen and (max-width: 950px) {
+  .post-container-one {
+    padding: 0 70px;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .post-container-one {
+    padding: 0 30px;
+  }
+}
+
 .post-heading {
   padding: 0;
   margin: 40px 0 10px 0;
   font-size: 55px;
+}
+
+@media screen and (max-width: 950px) {
+  .post-heading {
+    font-size: 45px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .post-heading {
+    font-size: 40px;
+  }
 }
 
 .user-p {
@@ -455,7 +480,7 @@ i:hover {
 .img-post-container {
   width: 100%;
   height: 400px;
-  background-color: #ccc;
+  background-color: #fff;
   margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -463,6 +488,11 @@ i:hover {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  display: flex;
+  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .img-post-container img {
@@ -470,9 +500,30 @@ i:hover {
   height: 400px;
 }
 
+@media screen and (max-width: 650px) {
+  .img-post-container img {
+    height: 300px;
+    max-width: 400px;
+  }
+}
+
 .nn-new {
   padding: 0px;
   font-size: 25px;
+  margin-top: 20px;
+  line-height: 1.1;
+}
+
+@media screen and (max-width: 950px) {
+  .nn-new {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .nn-new {
+    font-size: 20px;
+  }
 }
 
 pre {
@@ -496,6 +547,29 @@ pre * {
 .editor-container-compose {
   width: 100%;
   padding: 0 130px;
+}
+
+.editor-container-compose .custom-file-input {
+  width: 100px;
+  border: none;
+  opacity: 1 !important;
+}
+
+.editor-container-compose .upload-btn {
+  margin: 10px 0;
+}
+
+@media screen and (max-width: 1245px) {
+  .editor-container-compose {
+    padding: 0 80px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .editor-container-compose {
+    width: 90%;
+    padding: 0 20px;
+  }
 }
 
 .editor-container-compose button {
@@ -688,14 +762,14 @@ pre * {
 }
 
 .dashboard-container .user-data-dash {
-  padding: 30px 70px 0 70px;
+  padding: 30px 70px 0 70px !important;
   width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 @media screen and (max-width: 950px) {
   .dashboard-container .user-data-dash {
-    padding: 20px 30px 0 30px;
+    padding: 20px 30px 0 30px !important;
   }
 }
 
@@ -874,7 +948,6 @@ pre * {
 
 .activity-list {
   width: 100%;
-  background-color: red;
   margin-top: 30px;
 }
 
@@ -883,14 +956,19 @@ pre * {
   margin: 0 !important;
 }
 
+@media screen and (max-width: 650px) {
+  .activity-list .list-ul {
+    height: 70px;
+  }
+}
+
 .activity-list .list-ul li {
-  min-height: 70px;
   background-color: #b4b4b4;
 }
 
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 650px) {
   .activity-list .list-ul li {
-    min-height: 50px;
+    height: 100%;
   }
 }
 
@@ -898,7 +976,6 @@ pre * {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 100%;
 }
 
 .activity-list .list-ul li .list-item-div .right {
@@ -906,13 +983,21 @@ pre * {
   display: -ms-flexbox;
   display: flex;
   width: auto;
-  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .activity-list .list-ul li .list-item-div .right .post-img {
   width: 130px;
-  min-height: 70px;
   background-color: #ccc;
+  margin-right: 10px;
+}
+
+@media screen and (max-width: 650px) {
+  .activity-list .list-ul li .list-item-div .right .post-img {
+    height: 70px;
+  }
 }
 
 @media screen and (max-width: 950px) {
@@ -923,12 +1008,24 @@ pre * {
 
 .activity-list .list-ul li .list-item-div .right h3 {
   color: #121212;
-  padding: 10px 0 0 10px;
 }
 
 @media screen and (max-width: 950px) {
   .activity-list .list-ul li .list-item-div .right h3 {
     font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .activity-list .list-ul li .list-item-div .right h3 {
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .activity-list .list-ul li .list-item-div .right h3 {
+    width: 170px;
+    font-size: 14px;
   }
 }
 
