--- a/client/src/components/layout components/Trending/TrendingItem/_trendingitem.scss
+++ b/client/src/components/layout components/Trending/TrendingItem/_trendingitem.scss
@@ -9,7 +9,8 @@
     margin-left: 14px;
 
     &:first-child {
-        margin-left: 0;
+        margin: 0 10px;
+        margin-top: 30px;
     }
 
     @include responsive($tablet) {
@@ -29,7 +30,7 @@
         width: 320px;
 
         &:nth-child(2) {
-            margin-top: 30px;
+            margin-top: 20px;
         }
     }
 
