Done with responsiveness ;)

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -236,7 +236,12 @@
 
 .trending-item:first-child {
   margin: 0 10px;
-  margin-top: 30px;
+}
+
+@media screen and (max-width: 650px) {
+  .trending-item:first-child {
+    margin-top: 30px;
+  }
 }
 
 @media screen and (max-width: 1245px) {
@@ -341,6 +346,12 @@
   left: 0;
   right: 0;
   bottom: 0;
+}
+
+@media screen and (max-width: 1245px) {
+  .user-trending:nth-child(1), .user-trending:nth-child(2), .user-trending:nth-child(3), .user-trending:nth-child(4) {
+    display: block;
+  }
 }
 
 .moving {
