--- a/client/src/components/layout components/Trending/TrendingItem/_trendingitem.scss
+++ b/client/src/components/layout components/Trending/TrendingItem/_trendingitem.scss
@@ -10,7 +10,10 @@
 
     &:first-child {
         margin: 0 10px;
-        margin-top: 30px;
+
+        @include responsive($mobile) {
+            margin-top: 30px;
+        }
     }
 
     @include responsive($tablet) {
@@ -104,6 +107,18 @@
             }
         }
 
+    }
+}
+
+.user-trending {
+    @include responsive($tablet) {
+
+        &:nth-child(1),
+        &:nth-child(2),
+        &:nth-child(3),
+        &:nth-child(4) {
+            display: block;
+        }
     }
 }
 
