made upload a seperate route and displaying images in saved posts

--- a/client/src/components/pages/_activitylist.scss
+++ b/client/src/components/pages/_activitylist.scss
@@ -32,6 +32,11 @@
                         background-color: #ccc;
                         margin-right: 10px;
 
+                        img {
+                            width: 100%;
+                            height: 100%;
+                        }
+
                         @include responsive($mobile) {
                             height: 70px;
                         }
