--- a/client/src/App.css
+++ b/client/src/App.css
@@ -264,6 +264,9 @@
   .trending-item:nth-child(2) {
     margin-top: 20px;
   }
+  .trending-item:nth-child(1), .trending-item:nth-child(2), .trending-item:nth-child(3), .trending-item:nth-child(4) {
+    display: block;
+  }
 }
 
 .trending-item .img-container {
@@ -1003,6 +1006,11 @@ pre * {
   width: 130px;
   background-color: #ccc;
   margin-right: 10px;
+}
+
+.activity-list .list-ul li .list-item-div .right .post-img img {
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (max-width: 650px) {
