switching to testing branch

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1056,6 +1056,20 @@ pre * {
   background-color: #c5c5c5;
 }
 
+.img-container {
+  position: relative;
+}
+
+.img-container .change-profile-photo {
+  position: absolute;
+  background-color: #0066ff;
+  width: 25px;
+  height: 25px;
+  border-radius: 100%;
+  bottom: 8px;
+  right: 8px;
+}
+
 .container-fluid {
   display: -webkit-box;
   display: -ms-flexbox;
