--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -8,6 +8,7 @@
 @import './components/layout components/editor/posteditor';
 @import './components/pages/dashboard';
 @import './components/pages/activitylist';
+@import './components/pages/profile/profile';
 
 .container-fluid {
     display: flex;
